// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderForSlack text 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "text": "Booked *AA 100* JFK to LHR. See <https://sendero.travel/i/abc|itinerary>.",
          "type": "mrkdwn",
        },
        "type": "section",
      },
    ],
    "channel": "",
    "text": "Booked AA 100 JFK to LHR. See itinerary.",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack card 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "Itinerary held",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "text": {
          "text": "JFK to LHR on Apr 30. Hold expires in 15 minutes.",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"• Departs 21:30 EDT
• Economy Plus
• Refundable"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "sendero_approve.booking-1",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "Confirm",
              "type": "plain_text",
            },
            "type": "button",
            "value": "booking-1",
          },
          {
            "action_id": "sendero_reject.booking-1",
            "text": {
              "emoji": true,
              "text": "Cancel",
              "type": "plain_text",
            },
            "type": "button",
            "value": "booking-1",
          },
        ],
        "type": "actions",
      },
    ],
    "channel": "",
    "text": "Itinerary held",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack tool_invocation marks degraded:true with a fallback line 1`] = `
{
  "channel": "slack",
  "degraded": true,
  "payload": {
    "blocks": [
      {
        "text": {
          "text": "_Sendero AI invoking \`search_offers\`..._",
          "type": "mrkdwn",
        },
        "type": "section",
      },
    ],
    "channel": "",
    "text": "Sendero AI invoking search_offers",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack tool_result with share 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "Best fare found",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "text": {
          "text": "AA 100, JFK to LHR, $482.10 all-in.",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"• 1 stop
• 8h 5m
• Refundable"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "sendero_select_offer.off-1",
            "text": {
              "emoji": true,
              "text": "Hold this fare",
              "type": "plain_text",
            },
            "type": "button",
            "value": "off-1",
          },
        ],
        "type": "actions",
      },
    ],
    "channel": "",
    "text": "Best fare found",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack approval_request reuses buildApprovalBlocks (sendero_approval action_ids) 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "Approval requested · Casey Traveler",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "text": {
          "text": 
"*JFK to LHR* · 
_Departs 2026-04-25T10:15:00.000Z_"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "fields": [
          {
            "text": 
"*Amount*
$482.10 USD"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Fare class*
"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Booking*
\`booking-1\`"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Policy*
Out of policy"
,
            "type": "mrkdwn",
          },
        ],
        "type": "section",
      },
      {
        "text": {
          "text": 
"> *Policy flags:*
> • over_policy_cap"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "sendero_approval.approve",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "Approve",
              "type": "plain_text",
            },
            "type": "button",
            "value": "{"t":"","tr":"","b":"booking-1"}",
          },
          {
            "action_id": "sendero_approval.reject",
            "style": "danger",
            "text": {
              "emoji": true,
              "text": "Reject",
              "type": "plain_text",
            },
            "type": "button",
            "value": "{"t":"","tr":"","b":"booking-1"}",
          },
          {
            "action_id": "sendero_approval.open",
            "text": {
              "emoji": true,
              "text": "Open in Sendero",
              "type": "plain_text",
            },
            "type": "button",
            "url": "https://sendero.travel/dashboard/console?tripId=trip-1",
            "value": "",
          },
        ],
        "type": "actions",
      },
      {
        "elements": [
          {
            "text": "Booking held for 15 min · Sendero × Arc · _requested 2026-04-25T10:00:00.000Z_",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Approval requested: Casey Traveler",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack sources 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "elements": [
          {
            "text": "<https://aa.com/flights/100|AA flight status> · <https://heathrow.com/arrivals|Heathrow arrivals>",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Sources: AA flight status, Heathrow arrivals",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack esim_activation renders header + plan section + QR image + actions 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "📱 Trip eSIM ready",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "text": {
          "text": 
"*5 GB · 30 days · Japan + Korea*
5.0 GB · 30 days · JP, KR
_$3.00 · charged to your wallet_"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "alt_text": "Install QR for 5 GB · 30 days · Japan + Korea",
        "image_url": "https://app.sendero.travel/api/esim/qr/abc.def.png",
        "title": {
          "emoji": true,
          "text": "Scan to install",
          "type": "plain_text",
        },
        "type": "image",
      },
      {
        "elements": [
          {
            "action_id": "sendero_open_link",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "📱 Install on iPhone",
              "type": "plain_text",
            },
            "type": "button",
            "url": "https://app.sendero.travel/install/esim/abc.def",
          },
          {
            "action_id": "sendero_open_link.instructions",
            "text": {
              "emoji": true,
              "text": "Other devices",
              "type": "plain_text",
            },
            "type": "button",
            "url": "https://app.sendero.travel/install/esim/abc.def#instructions",
          },
        ],
        "type": "actions",
      },
      {
        "elements": [
          {
            "text": "iOS one-tap: iOS 17.4 or newer. Android scans the QR — tap "Other devices" for steps.",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Trip eSIM ready: 5 GB · 30 days · Japan + Korea",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack seat_picker renders header + section with overflow accessory routing to sendero_select_seat 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🪑 Seat for Casey Traveler",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "accessory": {
          "action_id": "sendero_select_seat",
          "options": [
            {
              "text": {
                "emoji": true,
                "text": "12A · 24.00 USD",
                "type": "plain_text",
              },
              "value": "{"tripId":"trp_test_001","offerId":"off_test_abc","passengerId":"pas_test_001","seatServiceId":"sea_001","designator":"12A","price":"24.00","currency":"USD"}",
            },
            {
              "text": {
                "emoji": true,
                "text": "14C · 18.00 USD",
                "type": "plain_text",
              },
              "value": "{"tripId":"trp_test_001","offerId":"off_test_abc","passengerId":"pas_test_001","seatServiceId":"sea_002","designator":"14C","price":"18.00","currency":"USD"}",
            },
          ],
          "type": "overflow",
        },
        "text": {
          "text": "Pick a seat — fare adjusts at booking.",
          "type": "mrkdwn",
        },
        "type": "section",
      },
    ],
    "channel": "",
    "text": "Seat picker for Casey Traveler",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack ancillary_picker renders one section per bag + cfar with sendero_add_bag buttons 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🧳 Bags + extras for Casey Traveler",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "accessory": {
          "action_id": "sendero_add_bag",
          "text": {
            "emoji": true,
            "text": "Add",
            "type": "plain_text",
          },
          "type": "button",
          "value": "{"tripId":"trp_test_001","offerId":"off_test_abc","passengerId":"pas_test_001","bagServiceId":"bag_001","quantity":1,"label":"Carry-on bag","price":"0.00","currency":"USD"}",
        },
        "text": {
          "text": 
"*Carry-on bag*
_7kg · 55×40×20_
0.00 USD"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "accessory": {
          "action_id": "sendero_add_bag",
          "text": {
            "emoji": true,
            "text": "Add",
            "type": "plain_text",
          },
          "type": "button",
          "value": "{"tripId":"trp_test_001","offerId":"off_test_abc","passengerId":"pas_test_001","bagServiceId":"bag_002","quantity":1,"label":"Checked bag","price":"45.00","currency":"USD"}",
        },
        "text": {
          "text": 
"*Checked bag*
_23kg_
45.00 USD"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Cancel for any reason*
_Refund up to 75% for any reason._
32.00 USD"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
    ],
    "channel": "",
    "text": "Bags + extras for Casey Traveler",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack trip_brief renders header + context + per-section blocks + share button 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🧭 NYC week",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "elements": [
          {
            "text": "*Status:* in_progress · *Dates:* 2026-06-01 → 2026-06-08 · *Route:* EZE → JFK",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
      {
        "text": {
          "text": "🟡 Outbound flight rebooked — confirm with traveler.",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*✈️ Flights*
• EZE → JFK · \`XYZ123\` · $850.00"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*🏨 Stays*
• The Mercer Hotel · New York · 6n · $1200.00"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*📱 Connectivity*
• 5.0 GB · 30d · US · active"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "sendero_open_link.trip_share",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "🔗 Share trip",
              "type": "plain_text",
            },
            "type": "button",
            "url": "https://app.sendero.travel/trip/abc.def",
          },
        ],
        "type": "actions",
      },
    ],
    "channel": "",
    "text": "Trip trp_test_001: EZE → JFK",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack stay_rate_picker emits one button per rate with select_stay_rate action_id 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🏨 Duffel Test Hotel",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "elements": [
          {
            "text": 
"1 room · 1 guest · 2026-06-04 → 2026-06-07
Henderson Island, GB"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
      {
        "type": "divider",
      },
      {
        "text": {
          "text": "*Successful Booking*",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "accessory": {
          "action_id": "select_stay_rate",
          "text": {
            "emoji": true,
            "text": "Pick this rate",
            "type": "plain_text",
          },
          "type": "button",
          "value": "rat_0000B5zdBpSS9xnoU7J48B",
        },
        "text": {
          "text": 
"$1,355.38 total
Tax \`$95.73\` · Fee \`$39.95\` · Due at property \`$39.95\`
✅ refundable · payment pay now (balance, card)"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "text": 
"_Sold by *Sendero Travel* · 548 Market St #38322, San Francisco, CA 94104, USA_
<mailto:hello@sendero.travel|hello@sendero.travel>  ·  +1 (415) 813-1131  ·  <https://sendero.travel/legal/terms|Booking conditions & T&C>  ·  <https://www.booking.com/content/terms.html|Booking.com terms>"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Hotel rates: Duffel Test Hotel",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack stay_quote_review surfaces every Duffel-mandated field + confirm/cancel actions 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🏨 Duffel Test Hotel",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "elements": [
          {
            "text": 
"1 room · 1 guest · 3 nights
Henderson Island, GB"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
      {
        "fields": [
          {
            "text": 
"*Check in*
2026-06-04
_from 14:30_"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Check out*
2026-06-07
_until 11:30_"
,
            "type": "mrkdwn",
          },
        ],
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Billing summary*
*Room*    \`$1,219.70\`
*Taxes*   \`$95.73\`
*Fees*    \`$39.95\`
*Total*   \`$1,355.38\`
*Due at property*  \`$39.95\`"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Cancellation policy*
:white_check_mark: Full refund until 2026-06-01 — \`$1,355.38\`
:warning: Partial refund until 2026-06-03 — \`$600.00\`
:x: No refund after 2026-06-03"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "type": "divider",
      },
      {
        "text": {
          "text": "*Hotel policy & rate conditions*",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Smoking*
No smoking allowed in any room. Smoking on the property carries a $250 cleaning fee."
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Pets*
Pets are not allowed."
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*:key: Key collection*
Collect from reception."
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "confirm_stay_booking",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "Confirm booking",
              "type": "plain_text",
            },
            "type": "button",
            "value": "{"q":"quo_0000B5zdBvh42oRqcoI4BO","t":"ten_test_123","tr":"trip_abc123","e":"casey@example.com","g":"Casey","f":"Traveler"}",
          },
          {
            "action_id": "cancel_stay_booking",
            "text": {
              "emoji": true,
              "text": "Cancel",
              "type": "plain_text",
            },
            "type": "button",
            "value": "{"q":"quo_0000B5zdBvh42oRqcoI4BO","t":"ten_test_123","tr":"trip_abc123","e":"casey@example.com","g":"Casey","f":"Traveler"}",
          },
        ],
        "type": "actions",
      },
      {
        "elements": [
          {
            "text": 
"_Sold by *Sendero Travel* · 548 Market St #38322, San Francisco, CA 94104, USA_
<mailto:hello@sendero.travel|hello@sendero.travel>  ·  +1 (415) 813-1131  ·  <https://sendero.travel/legal/terms|Booking conditions & T&C>  ·  <https://www.booking.com/content/terms.html|Booking.com terms>"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Hotel quote $1,355.38 — Duffel Test Hotel",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack stay_booking_confirmation surfaces reference + confirmedAt + key collection always-visible 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "✅ Booking confirmed",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "fields": [
          {
            "text": 
"*Booking reference*
\`AFE33SE2\`"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Confirmed at*
2026-04-25 10:05:00"
,
            "type": "mrkdwn",
          },
        ],
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Duffel Test Hotel*
Henderson Island, GB
1 room · 1 guest · 3 nights · Successful Booking"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "fields": [
          {
            "text": 
"*Check in*
2026-06-04
_from 14:30_"
,
            "type": "mrkdwn",
          },
          {
            "text": 
"*Check out*
2026-06-07
_until 11:30_"
,
            "type": "mrkdwn",
          },
        ],
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Billing summary*
*Room*    \`$1,219.70\`
*Taxes*   \`$95.73\`
*Fees*    \`$39.95\`
*Total*   \`$1,355.38\`
*Due at property*  \`$39.95\`"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Cancellation policy*
:white_check_mark: Full refund until 2026-06-01 — \`$1,355.38\`
:warning: Partial refund until 2026-06-03 — \`$600.00\`
:x: No refund after 2026-06-03"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "type": "divider",
      },
      {
        "text": {
          "text": "*Hotel policy & rate conditions*",
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*Smoking*
No smoking allowed in any room. Smoking on the property carries a $250 cleaning fee."
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "text": {
          "text": 
"*:key: Key collection*
Collect from reception."
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "open_link",
            "text": {
              "emoji": true,
              "text": "View trip",
              "type": "plain_text",
            },
            "type": "button",
            "url": "https://app.sendero.travel/trip/abc.def",
          },
        ],
        "type": "actions",
      },
      {
        "elements": [
          {
            "text": 
"_Sold by *Sendero Travel* · 548 Market St #38322, San Francisco, CA 94104, USA_
<mailto:hello@sendero.travel|hello@sendero.travel>  ·  +1 (415) 813-1131  ·  <https://sendero.travel/legal/terms|Booking conditions & T&C>  ·  <https://www.booking.com/content/terms.html|Booking.com terms>"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "Booking confirmed · AFE33SE2 · Duffel Test Hotel",
    "thread_ts": undefined,
  },
}
`;

exports[`renderForSlack stay_search_results emits one section + actions per hotel with select_stay_hotel button 1`] = `
{
  "channel": "slack",
  "payload": {
    "blocks": [
      {
        "text": {
          "emoji": true,
          "text": "🏨 2 hotels · 2026-06-04 → 2026-06-07",
          "type": "plain_text",
        },
        "type": "header",
      },
      {
        "elements": [
          {
            "text": "1 room · 1 guest",
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
      {
        "type": "divider",
      },
      {
        "accessory": {
          "alt_text": "Duffel Test Hotel",
          "image_url": "https://assets.duffel.com/img/duffel-hotel-group/luxury-1.png",
          "type": "image",
        },
        "text": {
          "text": 
"*Duffel Test Hotel* · ★★★★ · 8.8/10
Henderson Island · GB
$1,219.70 · ✅ free cancellation
_parking · wifi · pool_"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "select_stay_hotel",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "View rates",
              "type": "plain_text",
            },
            "type": "button",
            "value": "ssr_0000B5zd9zXpgcMvBmwkgG",
          },
        ],
        "type": "actions",
      },
      {
        "text": {
          "text": 
"*Coastal Inn* · ★★★ · 7.2/10
Henderson Island · GB
$650.00 · ⚠ partial refund
_wifi_"
,
          "type": "mrkdwn",
        },
        "type": "section",
      },
      {
        "elements": [
          {
            "action_id": "select_stay_hotel",
            "style": "primary",
            "text": {
              "emoji": true,
              "text": "View rates",
              "type": "plain_text",
            },
            "type": "button",
            "value": "ssr_0000B5zd9zXpgcMvBmwkgH",
          },
        ],
        "type": "actions",
      },
      {
        "elements": [
          {
            "text": 
"_Sold by *Sendero Travel* · 548 Market St #38322, San Francisco, CA 94104, USA_
<mailto:hello@sendero.travel|hello@sendero.travel>  ·  +1 (415) 813-1131  ·  <https://sendero.travel/legal/terms|Booking conditions & T&C>  ·  <https://www.booking.com/content/terms.html|Booking.com terms>"
,
            "type": "mrkdwn",
          },
        ],
        "type": "context",
      },
    ],
    "channel": "",
    "text": "2 hotels · 2026-06-04 → 2026-06-07",
    "thread_ts": undefined,
  },
}
`;
